kubernetes/coinflipper-viewer/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  name: coinflipper-viewer
  namespace: coinflipper
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: coinflipper-viewer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coinflipper-viewer
  namespace: coinflipper
spec:
  selector:
    matchLabels:
      app: coinflipper-viewer
  replicas: 1
  template:
    metadata:
      labels:
        app: coinflipper-viewer
    spec:  
      containers:
      - name: nginx-container
        image: nginx
        volumeMounts:
        - name: shared-data
          mountPath: /usr/share/nginx/html/
        - name: coinflipper-viewer
          mountPath: /usr/share/nginx/html/index.html
          subPath: index.html
        - name: coinflipper-viewer
          mountPath: /usr/share/nginx/html/github.png
          subPath: github.png
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "100m"
      - name: coinflipper-container
        image: tibordp/coinflipper:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: shared-data
          mountPath: /pod-data
        - name: coinflipper-viewer
          mountPath: /script/refresh.sh
          subPath: refresh.sh
        - name: coinflipper-viewer
          mountPath: /script/liveness.sh
          subPath: liveness.sh
        command: ["/script/refresh.sh"]
        livenessProbe:
          exec:
            command: ["/script/liveness.sh"]
          initialDelaySeconds: 5
          periodSeconds: 60
        resources:
          requests:
            memory: "32Mi"
            cpu: "50m"
          limits:
            memory: "64Mi"
            cpu: "100m"
      volumes:
      - name: coinflipper-viewer
        configMap:
          name: coinflipper-viewer
          defaultMode: 0777
      - name: shared-data
        emptyDir: {}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: coinflipper-viewer
  namespace: coinflipper
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - coinflipper.k8s.ojdip.net
    secretName: coinflipper-k8s-tls
  rules:
  - host: coinflipper.k8s.ojdip.net
    http:
      paths:
      - path: /
        backend:
          serviceName: coinflipper-viewer
          servicePort: 80
